# poker-bot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: convergence.ipynb
src/poker/: __init__.py  bot.py  card.py  cli.py  equity.py  evaluator.py  ranges.py
tests/: test_bot.py  test_card.py  test_cli.py  test_equity.py  test_evaluator.py  test_ranges.py
