[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "poker-equity"
version = "0.1.0"
description = "Texas Hold'em equity tool (Monte Carlo) and a simple push/fold + pot-odds bot"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "wmitc", email = "w.mitchell012@gmail.com" }]
keywords = ["poker", "monte-carlo", "equity", "expected-value", "quant"]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]
notebook = ["matplotlib>=3.7", "jupyter"]

[project.scripts]
poker = "poker.cli:main"

[project.urls]
Repository = "https://github.com/wmitc/poker-bot"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
